test/library/packages/DynamicLoading/RetrieveDataSymbol.good
RetrieveDataSymbol.chpl:13: error: The 'retrieve()' method currently only works with procedure types (tried to retrieve type 'int(32)')
